asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__gitui__tests__pull__pull_menu_no_remote_or_upstream_set.snap
---
source: src/gitui/tests/pull.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
Pull                            Arguments                                       |
p pushRemote, setting that      -r Rebase local commits (--rebase)              |
u upstream, setting that                                                        |
e from elsewhere                                                                |
q/<esc> Quit/Close                                                              |
styles_hash: 9294d1c15def01e9
