asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__gitui__tests__pull__pull_push_remote_prompt.snap
---
source: src/gitui/tests/pull.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Set pushRemote then pull: ›                                                   |
styles_hash: e0d524e635f78ab7
